--- a/geek_women_advent_cal_2017.ipynb
+++ b/geek_women_advent_cal_2017.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "このnotebookは[Geek Women Advent Calendar 2017](https://qiita.com/advent-calendar/2017/geekwomenjapan) 17日目の投稿です。    \n",
+    "遅くなりましたが、このnotebookは[Geek Women Advent Calendar 2017](https://qiita.com/advent-calendar/2017/geekwomenjapan) 17日目の投稿です。    \n",
     "16日目はkomo_frさんの[GitHubでmatplotlibにstarをつけている人が、他にどんなリポジトリに注目しているか調べてみる](https://github.com/komo-fr/AdventCalender/blob/master/2017/GeekWomenJapanAdventCalendar2017_day16.ipynb)でした。"
    ]
   },
@@ -1010,7 +1010,8 @@
    "source": [
     "以上、[Geek Women Advent Calendar 2017](https://qiita.com/advent-calendar/2017/geekwomenjapan) 17日目の投稿、「Pythonを使ったビンゴカードとビンゴ抽選器作り」でした。ぜひ忘年会のお供にご活用ください。プルリクもお待ちしています！   \n",
     "\n",
-    "明日は [@maaya8585](https://twitter.com/maaya8585) さんの担当です!"
+    "18日目は [@maaya8585](https://twitter.com/maaya8585) さんの[Azure Custom Vision Serviceはミッキーを判別できるのか](https://hotchpotchj37.wordpress.com/2017/12/18/azure-custom-vision-service%E3%81%AF%E3%83%9F%E3%83%83%E3%82%AD%E3%83%BC%E3%82%92%E5%88%A4%E5%88%A5%E3%81%A7%E3%81%8D%E3%82%8B%E3%81%AE%E3%81%8B/)です。  \n",
+    "ミッキーの顔のモデルチェンジが行われているなんて、全然知りませんでした！   "
    ]
   }
  ],
