--- a/geek_women_advent_cal_2017.ipynb
+++ b/geek_women_advent_cal_2017.ipynb
@@ -83,23 +83,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 整数列の作成(リスト内包表記)\n",
-    "リスト内包表記を使って整数列を作成します。   "
+    "#### 整数列の作成\n",
+    "NumPyを使って整数列を作成します。   "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "values_b = [x for x in range(1, 16)]\n",
-    "values_i = [x for x in range(16, 31)]\n",
-    "values_n = [x for x in range(31, 46)]\n",
-    "values_g = [x for x in range(46, 61)]\n",
-    "values_o = [x for x in range(61, 76)]"
+    "values_b = np.arange(1, 16)\n",
+    "values_i = np.arange(16, 31)\n",
+    "values_n = np.arange(31, 46)\n",
+    "values_g = np.arange(46, 61)\n",
+    "values_o = np.arange(61, 76)"
    ]
   },
   {
@@ -117,11 +115,11 @@
     {
      "data": {
       "text/plain": [
-       "([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15],\n",
-       " [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30],\n",
-       " [31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45],\n",
-       " [46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60],\n",
-       " [61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75])"
+       "(array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15]),\n",
+       " array([16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]),\n",
+       " array([31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]),\n",
+       " array([46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60]),\n",
+       " array([61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75]))"
       ]
      },
      "execution_count": 3,
@@ -184,11 +182,11 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 5,  4, 11, 14, 12]),\n",
-       " array([25, 29, 24, 21, 28]),\n",
-       " array([32, 39, 35, 41, 44]),\n",
-       " array([48, 58, 46, 57, 60]),\n",
-       " array([64, 67, 69, 73, 72]))"
+       "(array([ 7,  1,  6,  4, 11]),\n",
+       " array([21, 23, 19, 28, 22]),\n",
+       " array([41, 39, 34, 33, 37]),\n",
+       " array([57, 51, 55, 50, 48]),\n",
+       " array([71, 65, 72, 61, 68]))"
       ]
      },
      "execution_count": 5,
@@ -241,11 +239,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 5,  4, 11, 14, 12],\n",
-       "       [25, 29, 24, 21, 28],\n",
-       "       [32, 39, 35, 41, 44],\n",
-       "       [48, 58, 46, 57, 60],\n",
-       "       [64, 67, 69, 73, 72]])"
+       "array([[ 7,  1,  6,  4, 11],\n",
+       "       [21, 23, 19, 28, 22],\n",
+       "       [41, 39, 34, 33, 37],\n",
+       "       [57, 51, 55, 50, 48],\n",
+       "       [71, 65, 72, 61, 68]])"
       ]
      },
      "execution_count": 7,
@@ -298,11 +296,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 5, 25, 32, 48, 64],\n",
-       "       [ 4, 29, 39, 58, 67],\n",
-       "       [11, 24, 35, 46, 69],\n",
-       "       [14, 21, 41, 57, 73],\n",
-       "       [12, 28, 44, 60, 72]])"
+       "array([[ 7, 21, 41, 57, 71],\n",
+       "       [ 1, 23, 39, 51, 65],\n",
+       "       [ 6, 19, 34, 55, 72],\n",
+       "       [ 4, 28, 33, 50, 61],\n",
+       "       [11, 22, 37, 48, 68]])"
       ]
      },
      "execution_count": 9,
@@ -402,43 +400,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>25</td>\n",
-       "      <td>32</td>\n",
-       "      <td>48</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>29</td>\n",
-       "      <td>39</td>\n",
-       "      <td>58</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11</td>\n",
-       "      <td>24</td>\n",
-       "      <td>35</td>\n",
-       "      <td>46</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>14</td>\n",
+       "      <td>7</td>\n",
        "      <td>21</td>\n",
        "      <td>41</td>\n",
        "      <td>57</td>\n",
-       "      <td>73</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "      <td>51</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>19</td>\n",
+       "      <td>34</td>\n",
+       "      <td>55</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>33</td>\n",
+       "      <td>50</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>12</td>\n",
-       "      <td>28</td>\n",
-       "      <td>44</td>\n",
-       "      <td>60</td>\n",
-       "      <td>72</td>\n",
+       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>37</td>\n",
+       "      <td>48</td>\n",
+       "      <td>68</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -446,11 +444,11 @@
       ],
       "text/plain": [
        "    0   1   2   3   4\n",
-       "0   5  25  32  48  64\n",
-       "1   4  29  39  58  67\n",
-       "2  11  24  35  46  69\n",
-       "3  14  21  41  57  73\n",
-       "4  12  28  44  60  72"
+       "0   7  21  41  57  71\n",
+       "1   1  23  39  51  65\n",
+       "2   6  19  34  55  72\n",
+       "3   4  28  33  50  61\n",
+       "4  11  22  37  48  68"
       ]
      },
      "execution_count": 12,
@@ -524,43 +522,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>25</td>\n",
-       "      <td>32</td>\n",
-       "      <td>48</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>29</td>\n",
-       "      <td>39</td>\n",
-       "      <td>58</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>24</td>\n",
-       "      <td>35</td>\n",
-       "      <td>46</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>14</td>\n",
+       "      <td>7</td>\n",
        "      <td>21</td>\n",
        "      <td>41</td>\n",
        "      <td>57</td>\n",
-       "      <td>73</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "      <td>51</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>19</td>\n",
+       "      <td>34</td>\n",
+       "      <td>55</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>33</td>\n",
+       "      <td>50</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>12</td>\n",
-       "      <td>28</td>\n",
-       "      <td>44</td>\n",
-       "      <td>60</td>\n",
-       "      <td>72</td>\n",
+       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>37</td>\n",
+       "      <td>48</td>\n",
+       "      <td>68</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -568,11 +566,11 @@
       ],
       "text/plain": [
        "    0   1   2   3   4\n",
-       "1   5  25  32  48  64\n",
-       "2   4  29  39  58  67\n",
-       "3  11  24  35  46  69\n",
-       "4  14  21  41  57  73\n",
-       "5  12  28  44  60  72"
+       "1   7  21  41  57  71\n",
+       "2   1  23  39  51  65\n",
+       "3   6  19  34  55  72\n",
+       "4   4  28  33  50  61\n",
+       "5  11  22  37  48  68"
       ]
      },
      "execution_count": 14,
@@ -646,43 +644,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>25</td>\n",
-       "      <td>32</td>\n",
-       "      <td>48</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>29</td>\n",
-       "      <td>39</td>\n",
-       "      <td>58</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>24</td>\n",
-       "      <td>35</td>\n",
-       "      <td>46</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>14</td>\n",
+       "      <td>7</td>\n",
        "      <td>21</td>\n",
        "      <td>41</td>\n",
        "      <td>57</td>\n",
-       "      <td>73</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "      <td>51</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>19</td>\n",
+       "      <td>34</td>\n",
+       "      <td>55</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>33</td>\n",
+       "      <td>50</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>12</td>\n",
-       "      <td>28</td>\n",
-       "      <td>44</td>\n",
-       "      <td>60</td>\n",
-       "      <td>72</td>\n",
+       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>37</td>\n",
+       "      <td>48</td>\n",
+       "      <td>68</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -690,11 +688,11 @@
       ],
       "text/plain": [
        "    B   I   N   G   O\n",
-       "1   5  25  32  48  64\n",
-       "2   4  29  39  58  67\n",
-       "3  11  24  35  46  69\n",
-       "4  14  21  41  57  73\n",
-       "5  12  28  44  60  72"
+       "1   7  21  41  57  71\n",
+       "2   1  23  39  51  65\n",
+       "3   6  19  34  55  72\n",
+       "4   4  28  33  50  61\n",
+       "5  11  22  37  48  68"
       ]
      },
      "execution_count": 16,
@@ -788,43 +786,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>25</td>\n",
-       "      <td>32</td>\n",
-       "      <td>48</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>29</td>\n",
-       "      <td>39</td>\n",
-       "      <td>58</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>24</td>\n",
-       "      <td>BINGO</td>\n",
-       "      <td>46</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>14</td>\n",
+       "      <td>7</td>\n",
        "      <td>21</td>\n",
        "      <td>41</td>\n",
        "      <td>57</td>\n",
-       "      <td>73</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "      <td>51</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>19</td>\n",
+       "      <td>BINGO</td>\n",
+       "      <td>55</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>33</td>\n",
+       "      <td>50</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>12</td>\n",
-       "      <td>28</td>\n",
-       "      <td>44</td>\n",
-       "      <td>60</td>\n",
-       "      <td>72</td>\n",
+       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>37</td>\n",
+       "      <td>48</td>\n",
+       "      <td>68</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -832,11 +830,11 @@
       ],
       "text/plain": [
        "    B   I      N   G   O\n",
-       "1   5  25     32  48  64\n",
-       "2   4  29     39  58  67\n",
-       "3  11  24  BINGO  46  69\n",
-       "4  14  21     41  57  73\n",
-       "5  12  28     44  60  72"
+       "1   7  21     41  57  71\n",
+       "2   1  23     39  51  65\n",
+       "3   6  19  BINGO  55  72\n",
+       "4   4  28     33  50  61\n",
+       "5  11  22     37  48  68"
       ]
      },
      "execution_count": 19,
@@ -919,18 +917,16 @@
    "metadata": {},
    "source": [
     "### 1. 1から75までの整数列を生成する\n",
-    "ビンゴカードを作ったときと同様に、リスト内包表記を使って整数列を作ります。"
+    "1から75までの整数列を作ります。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "values = [x for x in range(1, 76)]"
+    "values = list(range(1, 76))"
    ]
   },
   {
@@ -974,7 +970,7 @@
     "        \n",
     "    else: # 抽出された値を出力する\n",
     "        print('【選択された値は (', v[0], ') です！】')\n",
-    "        values[int(v[0]) - 1] = '({})'.format(v[0])\n",
+    "        values[int(v[0]) - 1] = '({})'.format(str(v[0]))\n",
     "        print(values)"
    ]
   },
@@ -994,8 +990,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "【選択された値は ( 13 ) です！】\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, '(13)', 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75]\n"
+      "【選択された値は ( 41 ) です！】\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, '(41)', 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75]\n"
      ]
     }
    ],
